fix:message input color in dark mode

--- a/frontend/src/assets/scss/components/_messageInputContainer.scss
+++ b/frontend/src/assets/scss/components/_messageInputContainer.scss
@@ -80,6 +80,7 @@
         overflow-y: auto;
         scrollbar-width: thin;
         scrollbar-color: var(--chat-scroll-color) transparent;
+        color: var(--text-color);
         &::placeholder {
           font-size: 17px;
           color: var(--icon);
